--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+        <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -27,6 +28,10 @@
                 <option value="csv">as .csv</option>
                 <option value="json">as .json</option>
             </select>
+            <button id="de" class="btn btn-danger language_button"><img src="https://www.countryflags.io/de/flat/24.png"></button>
+            <button id="en" class="btn btn-danger language_button"><img src="https://www.countryflags.io/gb/flat/24.png"></button>
+            <button id="in" class="btn btn-danger language_button"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Bandanna_Roger_Flag.svg/2560px-Bandanna_Roger_Flag.svg.png" width="24" height="24"></button>
+            <button id="an" class="btn btn-danger language_button"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Anarchist_flag_with_A_symbol.svg" width="24" height="24"></button>
             <button id="download" class="btn btn-primary"><i class="fas fa-download fa-5x"></i></button>
             <div id="status">
                 <span id="power_timestamp"></span><br>
@@ -35,6 +40,7 @@
             <button id="keys" class="btn btn-primary"><i class="fas fa-key"></i></button>
             <button id="power" class="btn btn-success"><i class="fas fa-power-off"></i></button>
             <button id="logout" class="btn btn-danger"><i class="fas fa-sign-out-alt"></i></button>
+
         </main>
         <script src="script.js"></script>
     </body>
