--- a/public/index.html
+++ b/public/index.html
@@ -1,47 +1,63 @@
 <!DOCTYPE html>
 <html lang="de" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Twitter finder</title>
-        <meta name="viewport" content="width=device-width">
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
-        <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    </head>
-    <body>
-        <main>
-            <div id="time_select">
-                <input id="from" type="date" class="form-control" style="float: left; width: 40%;" value="">
-                <i class="fas fa-arrow-right" style="float:left; margin-top: 10px; width: 20%;"></i>
-                <input id="to" type="date" class="form-control" style="float: left; width: 40%;" value="">
-            </div>
 
-            <select  id="type_select" class="form-control">
-                <option value="txt">as .txt</option>
-                <option value="csv">as .csv</option>
-                <option value="csv_excel">as .csv for excel (includes "sep=,")</option>
-                <option value="json">as .json</option>
-            </select>
-            <button id="de" class="btn btn-danger language_button"><img src="https://www.countryflags.io/de/flat/24.png"></button>
-            <button id="en" class="btn btn-danger language_button"><img src="https://www.countryflags.io/gb/flat/24.png"></button>
-            <button id="in" class="btn btn-danger language_button"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/Bandanna_Roger_Flag.svg/2560px-Bandanna_Roger_Flag.svg.png" width="24" height="24"></button>
-            <button id="an" class="btn btn-danger language_button"><img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Anarchist_flag_with_A_symbol.svg" width="24" height="24"></button>
-            <button id="download" class="btn btn-primary"><i class="fas fa-download fa-5x"></i></button>
-            <div id="status">
-                <span id="power_timestamp"></span><br>
-                last tweet recorded: <span id="last_tweet"> - </span> ago
-            </div>
-            <button id="keys" class="btn btn-primary"><i class="fas fa-key"></i></button>
-            <button id="ban" class="btn btn-secondary"><i class="fas fa-ban"></i></button>
-            <button id="power" class="btn btn-success"><i class="fas fa-power-off"></i></button>
-            <button id="logout" class="btn btn-danger"><i class="fas fa-sign-out-alt"></i></button>
+<head>
+  <meta charset="utf-8">
+  <title>Twitter finder</title>
+  <meta name="viewport" content="width=device-width">
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
+  <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.2/dist/FileSaver.min.js"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+</head>
 
-        </main>
-        <script src="script.js"></script>
-    </body>
+<body>
+  <main class="p-4">
+    <div id="time_select">
+    </div>
+    <div class="row">
+      <div class="col-6 p-1">
+        <label>From:</label>
+        <input id="from" type="date" class="form-control" value="">
+      </div>
+      <div class="col-6 p-1">
+        <label>To:</label>
+        <input id="to" type="date" class="form-control" value="">
+      </div>
+      <div class="col-12 p-1">
+        <select id="type_select" class="form-control custom-select">
+          <option value="txt">as .txt</option>
+          <option value="csv">as .csv</option>
+          <option value="csv_excel">as .csv for excel (includes "sep=,")</option>
+          <option value="json">as .json</option>
+        </select>
+      </div>
+      <div class="col-12 p-1">
+        <button id="download" class="btn btn-primary w-100"><i class="fas fa-download"></i> download</button>
+      </div>
+      <div class="col-6 p-1">
+        <button id="keys" class="btn btn-primary w-100"><i class="fas fa-key"></i> tags</button>
+      </div>
+      <div class="col-6 p-1">
+        <button id="ban" class="btn btn-secondary w-100"><i class="fas fa-ban"></i> banned tags</button>
+      </div>
+      <div class="col-6 p-1">
+        <button id="power" class="btn btn-success w-100"><i class="fas fa-power-off"></i> power</button>
+      </div>
+      <div class="col-6 p-1">
+        <button id="logout" class="btn btn-danger w-100"><i class="fas fa-sign-out-alt"></i> logout</button>
+      </div>
+    </div>
+    <div id="tweets">
+
+    </div>
+
+  </main>
+  <script src="script.js"></script>
+</body>
+
 </html>
